sintatico/src/sintatico.output
Terminals unused in grammar

    MAIN
    ASPA_SIMPLES
    STRING


Grammar

    0 $accept: programa $end

    1 programa: lista_de_declaracoes

    2 lista_de_declaracoes: lista_de_declaracoes declaracao
    3                     | %empty

    4 declaracao: declaracao_de_variavel
    5           | declaracao_de_funcao
    6           | error

    7 declaracao_de_variavel: tipo_de_variavel lista_de_IDs PONTO_VIRGULA

    8 lista_de_IDs: lista_de_IDs VIRGULA ID
    9             | ID

   10 declaracao_de_funcao: tipo_de_variavel ID ABRE_PARENTESES parametros FECHA_PARENTESES definicao_de_funcao

   11 definicao_de_funcao: bloco_de_comando

   12 parametros: lista_de_parametros
   13           | %empty

   14 lista_de_parametros: lista_de_parametros VIRGULA parametro
   15                    | parametro

   16 parametro: tipo_de_variavel ID

   17 comando: bloco_de_comando
   18        | comando_unico
   19        | error

   20 comandos: comandos comando
   21         | %empty

   22 bloco_de_comando: ABRE_CHAVES comandos FECHA_CHAVES

   23 comando_unico: comando_condicional
   24              | comando_iterativo
   25              | declaracao_de_variavel
   26              | chamada_de_retorno
   27              | comando_de_atribuicao
   28              | expressao PONTO_VIRGULA

   29 comando_condicional: IF ABRE_PARENTESES expressao FECHA_PARENTESES comando
   30                    | IF ABRE_PARENTESES expressao FECHA_PARENTESES comando ELSE comando

   31 comando_iterativo: FOR ABRE_PARENTESES expressao_for PONTO_VIRGULA expressao_for PONTO_VIRGULA expressao_for FECHA_PARENTESES comando

   32 expressao_for: ID ATRIB expressao
   33              | expressao

   34 expressao: expressao VIRGULA exp
   35          | exp
   36          | %empty

   37 exp: exp GT exp
   38    | exp LT exp
   39    | exp EQ exp
   40    | exp NE exp
   41    | exp LE exp
   42    | exp GE exp
   43    | exp AND exp
   44    | exp OR exp
   45    | exp_list

   46 exp_list: exp_list CONSTRUTOR exp_list
   47         | exp_list FILTER exp_list
   48         | exp_list MAP exp_list
   49         | exp_aritmetica

   50 exp_aritmetica: termo
   51               | exp_aritmetica SOMA termo
   52               | exp_aritmetica SUB termo

   53 termo: fator
   54      | termo MULT fator
   55      | termo DIV fator

   56 fator: constante
   57      | SUB fator
   58      | SOMA fator
   59      | TAIL_OR_NOT fator
   60      | TAIL_POP fator
   61      | HEADER fator
   62      | ID
   63      | ABRE_PARENTESES exp FECHA_PARENTESES

   64 comando_de_atribuicao: ID ATRIB expressao PONTO_VIRGULA

   65 exp_funcao: ID ABRE_PARENTESES expressao FECHA_PARENTESES
   66           | READ ABRE_PARENTESES expressao FECHA_PARENTESES
   67           | WRITE ABRE_PARENTESES expressao FECHA_PARENTESES
   68           | WRITELN ABRE_PARENTESES expressao FECHA_PARENTESES

   69 chamada_de_retorno: RETURN expressao PONTO_VIRGULA

   70 tipo_de_variavel: INT
   71                 | FLOAT
   72                 | INT LIST
   73                 | FLOAT LIST

   74 constante: INTEGER_CONST
   75          | FLOAT_CONST
   76          | CONSTANTE_NIL
   77          | STRING_LITERAL
   78          | exp_funcao


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6 19
    IFX <node> (258)
    ID <node> (259) 8 9 10 16 32 62 64 65
    INT <node> (260) 70 72
    FLOAT <node> (261) 71 73
    LIST <node> (262) 72 73
    CONSTANTE_NIL <node> (263) 76
    TAIL_OR_NOT <node> (264) 59
    HEADER <node> (265) 61
    TAIL_POP <node> (266) 60
    MAP <node> (267) 48
    FILTER <node> (268) 47
    CONSTRUTOR <node> (269) 46
    READ <node> (270) 66
    WRITE <node> (271) 67
    WRITELN <node> (272) 68
    MAIN <node> (273)
    RETURN <node> (274) 69
    IF <node> (275) 29 30
    ELSE <node> (276) 30
    FOR <node> (277) 31
    AND <node> (278) 43
    OR <node> (279) 44
    LT <node> (280) 38
    LE <node> (281) 41
    EQ <node> (282) 39
    GT <node> (283) 37
    GE <node> (284) 42
    NE <node> (285) 40
    SOMA <node> (286) 51 58
    SUB <node> (287) 52 57
    MULT <node> (288) 54
    DIV <node> (289) 55
    VIRGULA <node> (290) 8 14 34
    PONTO_VIRGULA <node> (291) 7 28 31 64 69
    ASPA_SIMPLES <node> (292)
    ATRIB <node> (293) 32 64
    ABRE_PARENTESES <node> (294) 10 29 30 31 63 65 66 67 68
    FECHA_PARENTESES <node> (295) 10 29 30 31 63 65 66 67 68
    ABRE_CHAVES <node> (296) 22
    FECHA_CHAVES <node> (297) 22
    FLOAT_CONST <node> (298) 75
    INTEGER_CONST <node> (299) 74
    STRING_LITERAL <node> (300) 77
    STRING <node> (301)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    programa <node> (48)
        on left: 1
        on right: 0
    lista_de_declaracoes <node> (49)
        on left: 2 3
        on right: 1 2
    declaracao <node> (50)
        on left: 4 5 6
        on right: 2
    declaracao_de_variavel <node> (51)
        on left: 7
        on right: 4 25
    lista_de_IDs <node> (52)
        on left: 8 9
        on right: 7 8
    declaracao_de_funcao <node> (53)
        on left: 10
        on right: 5
    definicao_de_funcao <node> (54)
        on left: 11
        on right: 10
    parametros <node> (55)
        on left: 12 13
        on right: 10
    lista_de_parametros <node> (56)
        on left: 14 15
        on right: 12 14
    parametro <node> (57)
        on left: 16
        on right: 14 15
    comando <node> (58)
        on left: 17 18 19
        on right: 20 29 30 31
    comandos <node> (59)
        on left: 20 21
        on right: 20 22
    bloco_de_comando <node> (60)
        on left: 22
        on right: 11 17
    comando_unico <node> (61)
        on left: 23 24 25 26 27 28
        on right: 18
    comando_condicional <node> (62)
        on left: 29 30
        on right: 23
    comando_iterativo <node> (63)
        on left: 31
        on right: 24
    expressao_for <node> (64)
        on left: 32 33
        on right: 31
    expressao <node> (65)
        on left: 34 35 36
        on right: 28 29 30 32 33 34 64 65 66 67 68 69
    exp <node> (66)
        on left: 37 38 39 40 41 42 43 44 45
        on right: 34 35 37 38 39 40 41 42 43 44 63
    exp_list <node> (67)
        on left: 46 47 48 49
        on right: 45 46 47 48
    exp_aritmetica <node> (68)
        on left: 50 51 52
        on right: 49 51 52
    termo <node> (69)
        on left: 53 54 55
        on right: 50 51 52 54 55
    fator <node> (70)
        on left: 56 57 58 59 60 61 62 63
        on right: 53 54 55 57 58 59 60 61
    comando_de_atribuicao <node> (71)
        on left: 64
        on right: 27
    exp_funcao <node> (72)
        on left: 65 66 67 68
        on right: 78
    chamada_de_retorno <node> (73)
        on left: 69
        on right: 26
    tipo_de_variavel <node> (74)
        on left: 70 71 72 73
        on right: 7 10 16
    constante <node> (75)
        on left: 74 75 76 77 78
        on right: 56


State 0

    0 $accept: • programa $end

    $end   reduce using rule 3 (lista_de_declaracoes)
    error  reduce using rule 3 (lista_de_declaracoes)
    INT    reduce using rule 3 (lista_de_declaracoes)
    FLOAT  reduce using rule 3 (lista_de_declaracoes)

    programa              go to state 1
    lista_de_declaracoes  go to state 2


State 1

    0 $accept: programa • $end

    $end  shift, and go to state 3


State 2

    1 programa: lista_de_declaracoes •
    2 lista_de_declaracoes: lista_de_declaracoes • declaracao

    error  shift, and go to state 4
    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6

    $end  reduce using rule 1 (programa)

    declaracao              go to state 7
    declaracao_de_variavel  go to state 8
    declaracao_de_funcao    go to state 9
    tipo_de_variavel        go to state 10


State 3

    0 $accept: programa $end •

    $default  accept


State 4

    6 declaracao: error •

    $end   reduce using rule 6 (declaracao)
    error  reduce using rule 6 (declaracao)
    INT    reduce using rule 6 (declaracao)
    FLOAT  reduce using rule 6 (declaracao)


State 5

   70 tipo_de_variavel: INT •
   72                 | INT • LIST

    LIST  shift, and go to state 11

    ID  reduce using rule 70 (tipo_de_variavel)


State 6

   71 tipo_de_variavel: FLOAT •
   73                 | FLOAT • LIST

    LIST  shift, and go to state 12

    ID  reduce using rule 71 (tipo_de_variavel)


State 7

    2 lista_de_declaracoes: lista_de_declaracoes declaracao •

    $end   reduce using rule 2 (lista_de_declaracoes)
    error  reduce using rule 2 (lista_de_declaracoes)
    INT    reduce using rule 2 (lista_de_declaracoes)
    FLOAT  reduce using rule 2 (lista_de_declaracoes)


State 8

    4 declaracao: declaracao_de_variavel •

    $end   reduce using rule 4 (declaracao)
    error  reduce using rule 4 (declaracao)
    INT    reduce using rule 4 (declaracao)
    FLOAT  reduce using rule 4 (declaracao)


State 9

    5 declaracao: declaracao_de_funcao •

    $end   reduce using rule 5 (declaracao)
    error  reduce using rule 5 (declaracao)
    INT    reduce using rule 5 (declaracao)
    FLOAT  reduce using rule 5 (declaracao)


State 10

    7 declaracao_de_variavel: tipo_de_variavel • lista_de_IDs PONTO_VIRGULA
   10 declaracao_de_funcao: tipo_de_variavel • ID ABRE_PARENTESES parametros FECHA_PARENTESES definicao_de_funcao

    ID  shift, and go to state 13

    lista_de_IDs  go to state 14


State 11

   72 tipo_de_variavel: INT LIST •

    ID  reduce using rule 72 (tipo_de_variavel)


State 12

   73 tipo_de_variavel: FLOAT LIST •

    ID  reduce using rule 73 (tipo_de_variavel)


State 13

    9 lista_de_IDs: ID •
   10 declaracao_de_funcao: tipo_de_variavel ID • ABRE_PARENTESES parametros FECHA_PARENTESES definicao_de_funcao

    ABRE_PARENTESES  shift, and go to state 15

    VIRGULA        reduce using rule 9 (lista_de_IDs)
    PONTO_VIRGULA  reduce using rule 9 (lista_de_IDs)


State 14

    7 declaracao_de_variavel: tipo_de_variavel lista_de_IDs • PONTO_VIRGULA
    8 lista_de_IDs: lista_de_IDs • VIRGULA ID

    VIRGULA        shift, and go to state 16
    PONTO_VIRGULA  shift, and go to state 17


State 15

   10 declaracao_de_funcao: tipo_de_variavel ID ABRE_PARENTESES • parametros FECHA_PARENTESES definicao_de_funcao

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6

    FECHA_PARENTESES  reduce using rule 13 (parametros)

    parametros           go to state 18
    lista_de_parametros  go to state 19
    parametro            go to state 20
    tipo_de_variavel     go to state 21


State 16

    8 lista_de_IDs: lista_de_IDs VIRGULA • ID

    ID  shift, and go to state 22


State 17

    7 declaracao_de_variavel: tipo_de_variavel lista_de_IDs PONTO_VIRGULA •

    $end   reduce using rule 7 (declaracao_de_variavel)
    error  reduce using rule 7 (declaracao_de_variavel)
    INT    reduce using rule 7 (declaracao_de_variavel)
    FLOAT  reduce using rule 7 (declaracao_de_variavel)


State 18

   10 declaracao_de_funcao: tipo_de_variavel ID ABRE_PARENTESES parametros • FECHA_PARENTESES definicao_de_funcao

    FECHA_PARENTESES  shift, and go to state 23


State 19

   12 parametros: lista_de_parametros •
   14 lista_de_parametros: lista_de_parametros • VIRGULA parametro

    VIRGULA  shift, and go to state 24

    FECHA_PARENTESES  reduce using rule 12 (parametros)


State 20

   15 lista_de_parametros: parametro •

    VIRGULA           reduce using rule 15 (lista_de_parametros)
    FECHA_PARENTESES  reduce using rule 15 (lista_de_parametros)


State 21

   16 parametro: tipo_de_variavel • ID

    ID  shift, and go to state 25


State 22

    8 lista_de_IDs: lista_de_IDs VIRGULA ID •

    VIRGULA        reduce using rule 8 (lista_de_IDs)
    PONTO_VIRGULA  reduce using rule 8 (lista_de_IDs)


State 23

   10 declaracao_de_funcao: tipo_de_variavel ID ABRE_PARENTESES parametros FECHA_PARENTESES • definicao_de_funcao

    ABRE_CHAVES  shift, and go to state 26

    definicao_de_funcao  go to state 27
    bloco_de_comando     go to state 28


State 24

   14 lista_de_parametros: lista_de_parametros VIRGULA • parametro

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6

    parametro         go to state 29
    tipo_de_variavel  go to state 21


State 25

   16 parametro: tipo_de_variavel ID •

    VIRGULA           reduce using rule 16 (parametro)
    FECHA_PARENTESES  reduce using rule 16 (parametro)


State 26

   22 bloco_de_comando: ABRE_CHAVES • comandos FECHA_CHAVES

    error            reduce using rule 21 (comandos)
    ID               reduce using rule 21 (comandos)
    INT              reduce using rule 21 (comandos)
    FLOAT            reduce using rule 21 (comandos)
    CONSTANTE_NIL    reduce using rule 21 (comandos)
    TAIL_OR_NOT      reduce using rule 21 (comandos)
    HEADER           reduce using rule 21 (comandos)
    TAIL_POP         reduce using rule 21 (comandos)
    READ             reduce using rule 21 (comandos)
    WRITE            reduce using rule 21 (comandos)
    WRITELN          reduce using rule 21 (comandos)
    RETURN           reduce using rule 21 (comandos)
    IF               reduce using rule 21 (comandos)
    FOR              reduce using rule 21 (comandos)
    SOMA             reduce using rule 21 (comandos)
    SUB              reduce using rule 21 (comandos)
    VIRGULA          reduce using rule 21 (comandos)
    PONTO_VIRGULA    reduce using rule 21 (comandos)
    ABRE_PARENTESES  reduce using rule 21 (comandos)
    ABRE_CHAVES      reduce using rule 21 (comandos)
    FECHA_CHAVES     reduce using rule 21 (comandos)
    FLOAT_CONST      reduce using rule 21 (comandos)
    INTEGER_CONST    reduce using rule 21 (comandos)
    STRING_LITERAL   reduce using rule 21 (comandos)

    comandos  go to state 30


State 27

   10 declaracao_de_funcao: tipo_de_variavel ID ABRE_PARENTESES parametros FECHA_PARENTESES definicao_de_funcao •

    $end   reduce using rule 10 (declaracao_de_funcao)
    error  reduce using rule 10 (declaracao_de_funcao)
    INT    reduce using rule 10 (declaracao_de_funcao)
    FLOAT  reduce using rule 10 (declaracao_de_funcao)


State 28

   11 definicao_de_funcao: bloco_de_comando •

    $end   reduce using rule 11 (definicao_de_funcao)
    error  reduce using rule 11 (definicao_de_funcao)
    INT    reduce using rule 11 (definicao_de_funcao)
    FLOAT  reduce using rule 11 (definicao_de_funcao)


State 29

   14 lista_de_parametros: lista_de_parametros VIRGULA parametro •

    VIRGULA           reduce using rule 14 (lista_de_parametros)
    FECHA_PARENTESES  reduce using rule 14 (lista_de_parametros)


State 30

   20 comandos: comandos • comando
   22 bloco_de_comando: ABRE_CHAVES comandos • FECHA_CHAVES

    error            shift, and go to state 31
    ID               shift, and go to state 32
    INT              shift, and go to state 5
    FLOAT            shift, and go to state 6
    CONSTANTE_NIL    shift, and go to state 33
    TAIL_OR_NOT      shift, and go to state 34
    HEADER           shift, and go to state 35
    TAIL_POP         shift, and go to state 36
    READ             shift, and go to state 37
    WRITE            shift, and go to state 38
    WRITELN          shift, and go to state 39
    RETURN           shift, and go to state 40
    IF               shift, and go to state 41
    FOR              shift, and go to state 42
    SOMA             shift, and go to state 43
    SUB              shift, and go to state 44
    ABRE_PARENTESES  shift, and go to state 45
    ABRE_CHAVES      shift, and go to state 144
    FECHA_CHAVES     shift, and go to state 46
    FLOAT_CONST      shift, and go to state 47
    INTEGER_CONST    shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    VIRGULA        reduce using rule 36 (expressao)
    PONTO_VIRGULA  reduce using rule 36 (expressao)

    declaracao_de_variavel  go to state 50
    comando                 go to state 51
    bloco_de_comando        go to state 52
    comando_unico           go to state 53
    comando_condicional     go to state 54
    comando_iterativo       go to state 55
    expressao               go to state 56
    exp                     go to state 57
    exp_list                go to state 58
    exp_aritmetica          go to state 59
    termo                   go to state 60
    fator                   go to state 61
    comando_de_atribuicao   go to state 62
    exp_funcao              go to state 63
    chamada_de_retorno      go to state 64
    tipo_de_variavel        go to state 65
    constante               go to state 66


State 31

   19 comando: error •

    error            reduce using rule 19 (comando)
    ID               reduce using rule 19 (comando)
    INT              reduce using rule 19 (comando)
    FLOAT            reduce using rule 19 (comando)
    CONSTANTE_NIL    reduce using rule 19 (comando)
    TAIL_OR_NOT      reduce using rule 19 (comando)
    HEADER           reduce using rule 19 (comando)
    TAIL_POP         reduce using rule 19 (comando)
    READ             reduce using rule 19 (comando)
    WRITE            reduce using rule 19 (comando)
    WRITELN          reduce using rule 19 (comando)
    RETURN           reduce using rule 19 (comando)
    IF               reduce using rule 19 (comando)
    FOR              reduce using rule 19 (comando)
    SOMA             reduce using rule 19 (comando)
    SUB              reduce using rule 19 (comando)
    VIRGULA          reduce using rule 19 (comando)
    PONTO_VIRGULA    reduce using rule 19 (comando)
    ABRE_PARENTESES  reduce using rule 19 (comando)
    ABRE_CHAVES      reduce using rule 19 (comando)
    FECHA_CHAVES     reduce using rule 19 (comando)
    FLOAT_CONST      reduce using rule 19 (comando)
    INTEGER_CONST    reduce using rule 19 (comando)
    STRING_LITERAL   reduce using rule 19 (comando)


State 32

   62 fator: ID •
   64 comando_de_atribuicao: ID • ATRIB expressao PONTO_VIRGULA
   65 exp_funcao: ID • ABRE_PARENTESES expressao FECHA_PARENTESES

    ATRIB            shift, and go to state 67
    ABRE_PARENTESES  shift, and go to state 68

    MAP            reduce using rule 62 (fator)
    FILTER         reduce using rule 62 (fator)
    CONSTRUTOR     reduce using rule 62 (fator)
    AND            reduce using rule 62 (fator)
    OR             reduce using rule 62 (fator)
    LT             reduce using rule 62 (fator)
    LE             reduce using rule 62 (fator)
    EQ             reduce using rule 62 (fator)
    GT             reduce using rule 62 (fator)
    GE             reduce using rule 62 (fator)
    NE             reduce using rule 62 (fator)
    SOMA           reduce using rule 62 (fator)
    SUB            reduce using rule 62 (fator)
    MULT           reduce using rule 62 (fator)
    DIV            reduce using rule 62 (fator)
    VIRGULA        reduce using rule 62 (fator)
    PONTO_VIRGULA  reduce using rule 62 (fator)


State 33

   76 constante: CONSTANTE_NIL •

    MAP            reduce using rule 76 (constante)
    FILTER         reduce using rule 76 (constante)
    CONSTRUTOR     reduce using rule 76 (constante)
    AND            reduce using rule 76 (constante)
    OR             reduce using rule 76 (constante)
    LT             reduce using rule 76 (constante)
    LE             reduce using rule 76 (constante)
    EQ             reduce using rule 76 (constante)
    GT             reduce using rule 76 (constante)
    GE             reduce using rule 76 (constante)
    NE             reduce using rule 76 (constante)
    SOMA           reduce using rule 76 (constante)
    SUB            reduce using rule 76 (constante)
    MULT           reduce using rule 76 (constante)
    DIV            reduce using rule 76 (constante)
    VIRGULA        reduce using rule 76 (constante)
    PONTO_VIRGULA  reduce using rule 76 (constante)


State 34

   59 fator: TAIL_OR_NOT • fator

    ID               shift, and go to state 69
    CONSTANTE_NIL    shift, and go to state 33
    TAIL_OR_NOT      shift, and go to state 34
    HEADER           shift, and go to state 35
    TAIL_POP         shift, and go to state 36
    READ             shift, and go to state 37
    WRITE            shift, and go to state 38
    WRITELN          shift, and go to state 39
    SOMA             shift, and go to state 43
    SUB              shift, and go to state 44
    ABRE_PARENTESES  shift, and go to state 45
    FLOAT_CONST      shift, and go to state 47
    INTEGER_CONST    shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    fator       go to state 70
    exp_funcao  go to state 63
    constante   go to state 66


State 35

   61 fator: HEADER • fator

    ID               shift, and go to state 69
    CONSTANTE_NIL    shift, and go to state 33
    TAIL_OR_NOT      shift, and go to state 34
    HEADER           shift, and go to state 35
    TAIL_POP         shift, and go to state 36
    READ             shift, and go to state 37
    WRITE            shift, and go to state 38
    WRITELN          shift, and go to state 39
    SOMA             shift, and go to state 43
    SUB              shift, and go to state 44
    ABRE_PARENTESES  shift, and go to state 45
    FLOAT_CONST      shift, and go to state 47
    INTEGER_CONST    shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    fator       go to state 71
    exp_funcao  go to state 63
    constante   go to state 66


State 36

   60 fator: TAIL_POP • fator

    ID               shift, and go to state 69
    CONSTANTE_NIL    shift, and go to state 33
    TAIL_OR_NOT      shift, and go to state 34
    HEADER           shift, and go to state 35
    TAIL_POP         shift, and go to state 36
    READ             shift, and go to state 37
    WRITE            shift, and go to state 38
    WRITELN          shift, and go to state 39
    SOMA             shift, and go to state 43
    SUB              shift, and go to state 44
    ABRE_PARENTESES  shift, and go to state 45
    FLOAT_CONST      shift, and go to state 47
    INTEGER_CONST    shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    fator       go to state 72
    exp_funcao  go to state 63
    constante   go to state 66


State 37

   66 exp_funcao: READ • ABRE_PARENTESES expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 73


State 38

   67 exp_funcao: WRITE • ABRE_PARENTESES expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 74


State 39

   68 exp_funcao: WRITELN • ABRE_PARENTESES expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 75


State 40

   69 chamada_de_retorno: RETURN • expressao PONTO_VIRGULA

    ID               shift, and go to state 69
    CONSTANTE_NIL    shift, and go to state 33
    TAIL_OR_NOT      shift, and go to state 34
    HEADER           shift, and go to state 35
    TAIL_POP         shift, and go to state 36
    READ             shift, and go to state 37
    WRITE            shift, and go to state 38
    WRITELN          shift, and go to state 39
    SOMA             shift, and go to state 43
    SUB              shift, and go to state 44
    ABRE_PARENTESES  shift, and go to state 45
    FLOAT_CONST      shift, and go to state 47
    INTEGER_CONST    shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    VIRGULA        reduce using rule 36 (expressao)
    PONTO_VIRGULA  reduce using rule 36 (expressao)

    expressao       go to state 76
    exp             go to state 57
    exp_list        go to state 58
    exp_aritmetica  go to state 59
    termo           go to state 60
    fator           go to state 61
    exp_funcao      go to state 63
    constante       go to state 66


State 41

   29 comando_condicional: IF • ABRE_PARENTESES expressao FECHA_PARENTESES comando
   30                    | IF • ABRE_PARENTESES expressao FECHA_PARENTESES comando ELSE comando

    ABRE_PARENTESES  shift, and go to state 77


State 42

   31 comando_iterativo: FOR • ABRE_PARENTESES expressao_for PONTO_VIRGULA expressao_for PONTO_VIRGULA expressao_for FECHA_PARENTESES comando

    ABRE_PARENTESES  shift, and go to state 78


State 43

   58 fator: SOMA • fator

    ID               shift, and go to state 69
    CONSTANTE_NIL    shift, and go to state 33
    TAIL_OR_NOT      shift, and go to state 34
    HEADER           shift, and go to state 35
    TAIL_POP         shift, and go to state 36
    READ             shift, and go to state 37
    WRITE            shift, and go to state 38
    WRITELN          shift, and go to state 39
    SOMA             shift, and go to state 43
    SUB              shift, and go to state 44
    ABRE_PARENTESES  shift, and go to state 45
    FLOAT_CONST      shift, and go to state 47
    INTEGER_CONST    shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    fator       go to state 79
    exp_funcao  go to state 63
    constante   go to state 66


State 44

   57 fator: SUB • fator

    ID               shift, and go to state 69
    CONSTANTE_NIL    shift, and go to state 33
    TAIL_OR_NOT      shift, and go to state 34
    HEADER           shift, and go to state 35
    TAIL_POP         shift, and go to state 36
    READ             shift, and go to state 37
    WRITE            shift, and go to state 38
    WRITELN          shift, and go to state 39
    SOMA             shift, and go to state 43
    SUB              shift, and go to state 44
    ABRE_PARENTESES  shift, and go to state 45
    FLOAT_CONST      shift, and go to state 47
    INTEGER_CONST    shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49
